<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">BeatBot</string>
    <string name="midi_menu">Midi Menu</string>
    <string name="start_listening">Start Listening</string>
    <string name="stop_listening">Stop Listening</string>
	<string name="record">Record</string>
	<string name="play">Play</string>
	<string name="stop">Stop</string>	
	<string name="undo">Undo</string>
	<string name="delete">Delete</string>
	<string name="levels">Levels</string>
	<string name="bpm_tap">BPM Tap</string>
	<string name="snap">Snap to Grid</string>
	<string name="quantize">Quantize</string>
	<string name="current_grid">Current Grid</string>
	<string name="quarter_note">1/4</string>
	<string name="eighth_note">1/8</string>
	<string name="sixteenth_note">1/16</string>
	<string name="thirty_second_note">1/32</string>
	<string name="save">Save</string>
	<string name="save_midi">Save MIDI</string>
	<string name="open_midi">Open MIDI</string>
	<string name="save_wav">Export as WAV</string>	
	<string name="import_export_midi">Import/Export as MIDI</string>
    <string-array name="sample_types">
        <item name="kick">Kick</item>
        <item name="snare">Snare</item>
        <item name="hi_hat_closed">HH Closed</item>
        <item name="hi_hat_open">HH Open</item>
        <item name="rim">Rim</item>
        <item name="bass">Bass</item>
    </string-array>
    <string name="default_midi_file_name">MyMidi</string>
    
    <string name="sample_edit_activity">Sample Edit</string>
    <string name="preview_sample">Preview</string>
    <string name="loop_sample">Loop Sample</string>
    <string name="adsr">ADSR</string>
    <string name="reverse">Reverse</string>
    <string name="normalize">Normalize</string>
    <string name="chorus">Chorus</string>
    <string name="decimate">Decimate</string>
    <string name="delay">Delay</string>
    <string name="flanger">Flanger</string>
    <string name="filter">Filter</string>
    <string name="reverb">Reverb</string>
    <string name="tremelo">Tremelo</string>
    <string name="cutoff">Cutoff</string>
    <string name="resonance">Q</string>
    
    <string-array name="decimate_params">
        <item name="bits">Bits</item>
        <item name="samplerate">Rate</item>
    </string-array>
    
    <string-array name="delay_params">
    	<item name="time">Time</item>
    	<item name="feedback">Feedback</item>
    	<item name="wet">Wet</item>
    </string-array>

    <string-array name="filter_params">
    	<item name="cutoff">Cutoff</item>
    	<item name="resonance">Q</item>
    </string-array>

    <string-array name="reverb_params">
    	<item name="hfDamp">HF Damp</item>
    	<item name="feedback">Feedback</item>
    </string-array>
    
    <string-array name="chorus_params">
    	<item name="modRate">Rate</item>
    	<item name="modAmt">Amount</item>
    	<item name="time">Time</item>
    	<item name="feedback">Feedback</item>
    	<item name="wet">Wet</item>
    </string-array>
        
    <string-array name="flanger_params">
    	<item name="time">Time</item>
    	<item name="feedback">Feedback</item>
    	<item name="wet">Wet</item>
    	<item name="modRate">Frequency</item>
    	<item name="modAmt">Amount</item>
    	<item name="phase">Phase</item>
    </string-array>
    
    <string-array name="tremelo_params">
        <item name="freq">Frequency</item>
        <item name="depth">Depth</item>
    </string-array>
    
</resources>