<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/snap"
        android:icon="@drawable/btn_check_buttonless_off"
        android:title="@string/snap"/>
    <item
        android:id="@+id/quantize"
        android:icon="@drawable/quantize"
        android:title="@string/quantize">
        <menu>
            <item
                android:id="@+id/quantize_current"
                android:title="@string/current_grid"/>
            <item
                android:id="@+id/quantize_quarter"
                android:title="@string/quarter_note"/>
            <item
                android:id="@+id/quantize_eighth"
                android:title="@string/eighth_note"/>
            <item
                android:id="@+id/quantize_sixteenth"
                android:title="@string/sixteenth_note"/>
            <item
                android:id="@+id/quantize_thirty_second"
                android:title="@string/thirty_second_note"/>
        </menu>
    </item>
    <item
        android:id="@+id/midi_menu_item"
        android:icon="@drawable/midi"
        android:title="@string/import_export_midi" />
    <item
        android:id="@+id/save_wav"
        android:icon="@drawable/wav"
        android:title="@string/save_wav"/>

</menu>