<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <EditText 
        android:id="@+id/filePathEdit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/default_midi_file_name"
        android:inputType="textUri" />
    <Button 
        android:id="@+id/midi_save"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_midi"
        android:onClick="saveMidi" />
    
    <Button 
        android:id="@+id/midi_open"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/open_midi"
        android:onClick="openMidi" />
    
    <Button
        android:id="@+id/testOpenSL"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
        android:text="Test OpenSL"
        android:onClick="testOpenSl" />
    
</LinearLayout>