<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >
    
    <com.kh.beatbot.view.SquareToggle
        android:id="@+id/playButton"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:background="@drawable/play_btn_src"
        android:contentDescription="@string/play"
        android:onClick="play"
        android:textOff=""
        android:textOn="" />

    <com.kh.beatbot.view.SquareImageView
        android:id="@+id/stopButton"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:background="@drawable/stop_btn_src"
        android:contentDescription="@string/stop"
        android:onClick="stop" />

    <com.kh.beatbot.view.SquareToggle
        android:id="@+id/recordButton"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:background="@drawable/rec_btn_src"
        android:contentDescription="@string/record"
        android:onClick="record"
        android:textOff=""
        android:textOn="" />
        
</LinearLayout>