<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <com.kh.beatbot.view.SquareToggle
        android:id="@+id/copy"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:background="@drawable/copy_btn_src"
        android:contentDescription="@string/copy"
        android:onClick="copy"
        android:state_enabled="false"
        android:textOff=""
        android:textOn="" />
    
    <com.kh.beatbot.view.SquareImageButton
        android:id="@+id/delete"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:background="@drawable/delete_btn_src"
        android:contentDescription="@string/delete"
        android:onClick="delete"
        android:state_enabled="false" />

    <com.kh.beatbot.view.SquareImageButton
        android:id="@+id/undo"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:background="@drawable/undo_btn_src"
        android:contentDescription="@string/undo"
        android:onClick="undo" />

    <com.kh.beatbot.view.SquareImageButton
        android:id="@+id/bpm_tap"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:background="@drawable/bpm_tap_btn_src"
        android:contentDescription="@string/bpm_tap"
        android:onClick="bpmTap" />

    <com.kh.beatbot.view.group.GLSurfaceViewGroup
        android:id="@+id/bpm"
        android:layout_width="66dp"
        android:layout_height="fill_parent"
        android:layout_marginLeft="10dp" />

</LinearLayout>